# Sunda-Language

./: .gitignore  LICENSE  MANIFEST.in  README.md  aksara.html  index.html  playground.html  pyproject.toml  run-sunda.bat
.github/: FUNDING.yml
css/: playground-game.css  playground.css  style.css
examples/: fungsi.sunda  hello_world.sunda  kalkulator.sunda  kasalahan.sunda  oop.sunda  pikeun.sunda  rekursi.sunda  upami.sunda
js/: playground-page.js  playground.js  sunda-aksara-engine.js  sunda-aksara-highlighter.js  sunda-engine.js  sunda-highlighter.js
src/: __init__.py  instructions.txt  interpreter.py  lexer.py  main.py  run_sunda.py  setup.py  sunda_parser.py  test_sunda_language.py
sunda-vscode/: README.md  language-configuration.json  package.json
sunda-vscode/syntaxes/: sunda.tmLanguage.json
sunda_language/: __init__.py  __main__.py  interpreter.py  lexer.py  sunda_parser.py
sunda_language.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
