[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sunda-language"
version = "1.0.0"
description = "Basa pamrograman saderhana nganggo Basa Sunda"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
authors = [
    {name = "Muhammad Ikhwan Fathulloh"}
]
keywords = ["sunda", "programming-language", "bahasa-sunda", "interpreter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Interpreters",
]

[project.scripts]
sunda = "src.main:main"

[tool.setuptools.packages.find]
include = ["src*"]
